Alignment fix
Same as master but now in the correct branch.

--- a/src/components/middle/message/_message-content.scss
+++ b/src/components/middle/message/_message-content.scss
@@ -10,6 +10,8 @@
     margin: 0;
     word-break: break-word;
     line-height: 1.3125;
+    unicode-bidi: plaintext;
+    text-align: justify;
   }
 
   .theme-dark .Message.own & {
